--- a/src/main/resources/fxml/Scene.fxml
+++ b/src/main/resources/fxml/Scene.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
@@ -41,11 +40,15 @@
                <children>
                   <Label text="Id oggetto" GridPane.rowIndex="1" />
                   <Label text="LUN" GridPane.rowIndex="2" />
-                  <ChoiceBox fx:id="boxLUN" prefWidth="200.0" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                   <Button fx:id="btnCalcolaComponenteConnessa" mnemonicParsing="false" onAction="#doCalcolaComponenteConnessa" prefHeight="27.0" prefWidth="162.0" text="Componente connessa" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                   <Button fx:id="btnCercaOggetti" mnemonicParsing="false" onAction="#doCercaOggetti" prefHeight="27.0" prefWidth="162.0" text="Cerca oggetti" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
                   <Button fx:id="btnAnalizzaOggetti" mnemonicParsing="false" onAction="#doAnalizzaOggetti" prefHeight="27.0" prefWidth="162.0" text="Analizza oggetti" GridPane.columnIndex="2" GridPane.halignment="CENTER" />
                   <TextField fx:id="txtObjectId" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <GridPane.margin>
+                        <Insets left="15.0" right="15.0" />
+                     </GridPane.margin>
+                  </TextField>
+                  <TextField fx:id="txtLUN" GridPane.columnIndex="1" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets left="15.0" right="15.0" />
                      </GridPane.margin>
